guac-server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: guac-server
spec:
  selector:
    app: guac-server
  ports:
  - name: http
    port: 8080
    protocol: TCP
  type: ClusterIP
