guac-server-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: guac-server-ingressroute
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: HostRegexp(`{host:.+}`)
      priority: 1
      services:
        - kind: Service
          name: guac-server
          port: 8080
